--- a/config/config-local.yml
+++ b/config/config-local.yml
@@ -37,7 +37,7 @@ postgres:
   PostgresqlPort: 5432
   PostgresqlUser: postgres
   PostgresqlPassword: postgres
-  PostgresqlDbname: auth_db
+  PostgresqlDbname: checkoutaja_db
   PostgresqlSslmode: false
   PgDriver: postgres
 
